--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,9 @@ spring:
     username: root
     password: admin
     url: jdbc:mysql://localhost:3306/clg
+  # session time out
+  session:
+    timeout: 86400
 server:
   port: 8080
 mybatis-plus:
